Fix overflow issue with code snippets

--- a/codebox/src/scss/main.scss
+++ b/codebox/src/scss/main.scss
@@ -99,15 +99,14 @@ section {
 }
 
 pre {
-	display: block;
     background-color: #333;
     border-radius: 4px;
     color: #b3b9c5;
-    overflow: auto;
-    padding: 2rem;
-    max-width: 100%;
+    overflow: scroll;
     font-family: monospace;
+    padding-left: 20px;
     margin: 2rem 0;
+    tab-size: 4;
 }
 
 code {
